jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int ECF_Consumidor_GetDocumento(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_GetEndereco(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_InfoRodapeCupom_GetCupomMania(const INTPTR ecfHandle);

DllImport int ECF_InfoRodapeCupom_GetDav(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_InfoRodapeCupom_GetDavOs(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_InfoRodapeCupom_GetMinasLegal(const INTPTR ecfHandle);

DllImport int ECF_InfoRodapeCupom_GetParaibaLegal(const INTPTR ecfHandle);

DllImport int ECF_InfoRodapeCupom_GetPreVenda(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_GetImprimir(const INTPTR ecfHandle);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_GetProgramaDeCredito(const INTPTR ecfHandle);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_GetValorICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_GetValorISS(const INTPTR ecfHandle, double* value);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_SetImprimir(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_SetProgramaDeCredito(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_SetValorICMS(const INTPTR ecfHandle, const double value);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_SetValorISS(const INTPTR ecfHandle, const double value);

DllImport int ECF_InfoRodapeCupom_SetCupomMania(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_InfoRodapeCupom_SetDav(const INTPTR ecfHandle, const PCHAR value);

DllImport int ECF_InfoRodapeCupom_SetDavOs(const INTPTR ecfHandle, const PCHAR value);

DllImport int ECF_InfoRodapeCupom_SetMinasLegal(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_InfoRodapeCupom_SetParaibaLegal(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_InfoRodapeCupom_SetPreVenda(const INTPTR ecfHandle, const PCHAR value);